# Modeling

./: Application.cpp  Application.h  CMakeLists.txt  Modeling.cpp  Modeling.h  README.md  main.cpp  names.txt  surnames.txt
include/: Application.h  Canvas.h  Drawable.h  Modeling.h  QSFMLCanvas.h  Utility.h
src/: Application.cpp  Canvas.cpp  Drawable.cpp  Modeling.cpp  QSFMLCanvas.cpp  main.cpp
